--- a/sorteio.html
+++ b/sorteio.html
@@ -17,6 +17,7 @@
             color: white;
             padding: 10px 20px;
             text-align: center;
+            display: none; /* Esconder o header até a validação */
         }
         nav a {
             color: white;
@@ -30,7 +31,7 @@
             background-color: white;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            display: none; /* Escondido até a senha ser validada */
+            display: none; /* Esconder o conteúdo até a validação */
         }
         .password-container {
             max-width: 400px;
@@ -130,6 +131,7 @@
             color: white;
             text-align: center;
             padding: 10px;
+            display: none; /* Esconder o rodapé até a validação */
         }
         .share-button {
             background-color: #25d366;
@@ -148,6 +150,18 @@
     </style>
 </head>
 <body>
+    <header id="header">
+        <h1>Rifa Solidária para o Miguel</h1>
+        <nav id="nav">
+            <a href="/rifa-miguel/index.html">Início</a>
+            <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
+            <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
+            <a href="#contato">Contato</a>
+            <a href="/rifa-miguel/sorteio.html">Sorteio</a>
+            <a href="/rifa-miguel/sorteio-ao-vivo.html">Sorteio ao Vivo</a>
+        </nav>
+    </header>
+
     <div class="password-container" id="password-container">
         <h2>Acesso Restrito</h2>
         <p>Digite a senha para acessar a página de sorteio:</p>
@@ -155,18 +169,6 @@
         <button onclick="validatePassword()">Entrar</button>
         <p id="password-error" class="password-error">Senha incorreta. Tente novamente.</p>
     </div>
-
-    <header>
-        <h1>Rifa Solidária para o Miguel</h1>
-        <nav>
-            <a href="/rifa-miguel/index.html">Início</a>
-            <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
-            <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
-            <a href="#contato">Contato</a>
-            <a href="https://ederamorimth.github.io/rifa-miguel/sorteio.html">Sorteio</a>
-            <a href="/rifa-miguel/sorteio-ao-vivo.html">Sorteio ao Vivo</a>
-        </nav>
-    </header>
 
     <section class="content" id="content">
         <h2>Lista de Compras da Rifa</h2>
@@ -207,7 +209,6 @@
         let purchasesData = [];
         let currentWinner = null;
 
-        // Função para gerar hash SHA-256 no lado do cliente
         async function sha256(str) {
             const encoder = new TextEncoder();
             const data = encoder.encode(str);
@@ -215,29 +216,30 @@
             return Array.from(new Uint8Array(hash)).map(b => b.toString(16).padStart(2, '0')).join('');
         }
 
-        // Validar senha
         async function validatePassword() {
             const passwordInput = document.getElementById('password-input').value;
             const passwordError = document.getElementById('password-error');
             const passwordContainer = document.getElementById('password-container');
             const content = document.getElementById('content');
+            const header = document.getElementById('header');
+            const footer = document.getElementById('contato');
 
             try {
                 const response = await fetch('https://rifa-miguel.onrender.com/get-page-password', {
                     method: 'GET',
                     headers: { 'Content-Type': 'application/json' }
                 });
-                if (!response.ok) {
-                    throw new Error(`Erro HTTP ${response.status}`);
-                }
+                if (!response.ok) throw new Error(`Erro HTTP ${response.status}`);
                 const data = await response.json();
                 const serverHash = data.passwordHash;
 
                 const inputHash = await sha256(passwordInput);
                 if (inputHash === serverHash) {
                     passwordContainer.style.display = 'none';
+                    header.style.display = 'block';
                     content.style.display = 'block';
-                    loadPurchases(); // Carrega as compras após validar a senha
+                    footer.style.display = 'block';
+                    loadPurchases();
                 } else {
                     passwordError.style.display = 'block';
                 }
@@ -267,10 +269,7 @@
                     });
                     clearTimeout(timeoutId);
 
-                    if (!response.ok) {
-                        throw new Error(`HTTP error: ${response.status}`);
-                    }
-
+                    if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
                     purchasesData = await response.json();
                     console.log('Compras carregadas com sucesso:', purchasesData);
 
@@ -338,7 +337,6 @@
             }
 
             currentWinner = winner;
-
             winnerMessage.innerHTML = `
                 <h3>Parabéns ao Ganhador!</h3>
                 <p><strong>Nome:</strong> ${winner.buyerName || 'N/A'}</p>
