--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
         header {
             background-color: #007bff;
             color: white;
-            padding: 10px 20px;
+            padding: 0;
             text-align: center;
             position: relative;
             overflow: hidden;
+            height: 200px; /* Altura ajustada para a imagem */
         }
         header img {
-            max-width: 150px;
-            height: auto;
-            border-radius: 50%;
-            border: 5px solid #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            margin: 10px 0;
-            transform: scale(1);
-            transition: transform 0.3s ease;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Garante que a imagem ocupe todo o espaço */
+            filter: brightness(0.7); /* Escurece um pouco para melhorar a legibilidade do texto */
         }
-        header img:hover {
-            transform: scale(1.1);
+        header h1 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin: 0;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Sombra no texto para destacar */
+            z-index: 1;
         }
         nav {
             display: flex;
@@ -39,6 +43,7 @@
             justify-content: center;
             gap: 8px;
             padding: 10px 0;
+            background-color: #0056b3; /* Fundo diferente para a navegação */
         }
         .nav-button {
             background-color: #0056b3;
@@ -228,8 +233,8 @@
                 padding: 8px;
                 font-size: 0.9em;
             }
-            header img {
-                max-width: 120px;
+            header {
+                height: 150px; /* Altura reduzida para telas menores */
             }
             .hero h2 {
                 font-size: 1.5em;
@@ -251,14 +256,14 @@
     <header>
         <img src="/rifa-miguel/imagens/miguel.jpg" alt="Foto do Miguel">
         <h1>Rifa Solidária para o Miguel</h1>
-        <nav>
-            <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
-            <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
-            <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Estrabismo</a>
-            <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
-            <a href="https://ederamorimth.github.io/rifa-miguel/sorteio.html" class="nav-button">Sorteio</a>
-        </nav>
     </header>
+    <nav>
+        <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
+        <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
+        <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Estrabismo</a>
+        <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
+        <a href="https://ederamorimth.github.io/rifa-miguel/sorteio.html" class="nav-button">Sorteio</a>
+    </nav>
 
     <section class="hero" id="home">
         <h2>Ajude o Miguel a enxergar o mundo com clareza!</h2>
