--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     <div id="loading-message" class="loading-message">Aguarde um momento, o número está sendo marcado...</div>
 
     <section class="form-container">
+        <p class="info">Atenção: É importante colocar seu número correto, pois entraremos em contato com todos os compradores.</p>
         <h3>Finalize sua compra</h3>
         <form id="payment-form">
             <input type="text" id="buyer-name" placeholder="Nome Completo" required>
@@ -289,8 +290,11 @@
         <p>Contato:</p>
         <p>Evelyn Mãe do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
         <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
+        <p>Instagram:</p>
+        <p>Eder: <a href="https://www.instagram.com/ederamorim65">@ederamorim65</a></p>
+        <p>Evelyn: <a href="https://www.instagram.com/evelyn.caprinii">@evelyn.caprinii</a></p>
         <p>Para dúvidas, entre em contato via WhatsApp!</p>
-        <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Conheça%20a%20causa%20do%20Miguel%20e%20ajude%20na%20rifa%20solidária!%20Saiba%20mais%20sobre%20o%20estrabismo%20e%20participe:%20https://ederamorimth.github.io/rifa-miguel/sobre-estrabismo.html%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
+        <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Conheça%20a%20causa%20do%20Miguel%20e%20ajude%20na%20rifa%20solidária!%20Saiba%20mais%20sobre%20o%20estrabismo%20e%20participe:%20https://ederamorimth.github.io/rifa-miguel/sobre-estrabismo.html%20%转为%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
         <p>© 2025 Rifa Solidária para o Miguel</p>
     </footer>
 
